# CMake_Cpp_Projects

./: README.md
Project1/source/: CMakeLists.txt  main.cpp
Project1/source/include/: mult.hpp  sum.hpp
Project1/source/src/: mult.cpp  sum.cpp
